# orsf

./: .gitignore  README.md
Swift/: ORSFAdapter.swift  ORSFCore.swift
cpp/: .gitignore  BUILD_TEST_RESULTS.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md
cpp/docs/: API_REFERENCE.md  BUILD_GUIDE.md
cpp/examples/: CMakeLists.txt  adapter_example.cpp  basic_usage.cpp  conversion_example.cpp  validation_example.cpp
cpp/include/orsf/: adapter.hpp  core.hpp  mapping.hpp  orsf.hpp  utils.hpp  validator.hpp
cpp/src/: adapter.cpp  core.cpp  mapping.cpp  utils.cpp  validator.cpp
cpp/tests/: CMakeLists.txt  test_adapter.cpp  test_core.cpp  test_main.cpp  test_mapping.cpp  test_utils.cpp  test_validator.cpp
